chore: Try to see if I can fix the github pages. Currently not loading and giving 404. This fix adds a 404 page to my public folder and redirects to /

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "manage-my-residents",
   "private": true,
-  "version": "0.0.0",
+  "homepage": "https://ethant11.github.io/manage-my-residents",
+  "version": "0.5.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
